<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorAccent"
    tools:context="com.einfoplanet.loginregister.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:gravity="center"
        style="?android:textAppearanceLarge"
        android:textStyle="bold"
        android:id="@+id/txtView1"
        />

    <RelativeLayout
        android:layout_below="@+id/txtView1"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relative_layout">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heading_name"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:id="@+id/txtViewName"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtViewName"
            android:hint="@string/hintName"
            android:layout_marginTop="10dp"
            android:id="@+id/etRegName"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_below="@+id/etRegName"
            android:layout_marginTop="10dp"
            android:text="@string/heading_email"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/txtViewEmail"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtViewEmail"
            android:layout_marginTop="10dp"
            android:hint="@string/hintEmail"
            android:id="@+id/etRegEmail"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etRegEmail"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:text="@string/heading_password"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/txtViewPassword"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtViewPassword"
            android:layout_marginTop="10dp"
            android:hint="@string/hintPassword"
            android:id="@+id/etRegPassword"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etRegPassword"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            android:text="@string/heading_con_password"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/txtViewConPassword"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtViewConPassword"
            android:layout_marginTop="10dp"
            android:hint="@string/hintPassword"
            android:id="@+id/etRegConPassword"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegister"
            android:background="@drawable/button_resourse"
            android:text="@string/btnRegister"
            android:layout_below="@+id/etRegConPassword"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>


</RelativeLayout>
