<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/colorAccent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.einfoplanet.loginregister.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:gravity="center"
        style="?android:textAppearanceLarge"
        android:textStyle="bold"
        android:id="@+id/txtView1"
        />

    <RelativeLayout
        android:layout_below="@+id/txtView1"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relative_layout">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etRegName"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:text="@string/heading_email"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/txtViewEmail"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtViewEmail"
            android:layout_marginTop="10dp"
            android:hint="@string/hintEmail"
            android:id="@+id/etLoginEmail"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etLoginEmail"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:text="@string/heading_password"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/txtViewPassword"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtViewPassword"
            android:layout_marginTop="10dp"
            android:hint="@string/hintPassword"
            android:id="@+id/etLoginPassword"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:text="@string/btnLogin"
            android:textColor="@android:color/white"
            android:layout_below="@+id/etLoginPassword"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_resourse"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_user"
        android:layout_below="@+id/relative_layout"
        android:id="@+id/txtViewSignUp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textAppearance="?android:textAppearanceLarge"/>
</RelativeLayout>
